--- a/_config.yml
+++ b/_config.yml
@@ -103,9 +103,9 @@ analytics:
 
 # Site Author
 author:
-  name: "Your Name"
+  name: "Henry Burkhardt"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "I am an **amazing** person."
+  bio: "Writing about my **unprofessional** opinions on computer science, philosophy and politics."
   location: "Carleton College"
   email:
   links:
@@ -123,7 +123,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/henryburkhardt"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
