--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name: "Henry Burkhardt"
   avatar: "/assets/images/bio_photo4.jpeg"
-  bio: "Writing about my **unprofessional** opinions on computer science, philosophy and politics."
+  bio: "My projects and unprofessional opinions on computer science, philosophy and politics."
   location: "Carleton College"
   email:
   links:
